# CALint-GUI

./: Dockerfile  Makefile  README.md  requirements.txt
backend/calint/: pyproject.toml
backend/calint/__MACOSX/calint/use_cases/: ._ports
backend/calint/calint/: .calintrc.json  main.py
backend/calint/calint/adapters/: __init__.py  linter.py  presenter.py  serializer.py
backend/calint/calint/entities/: __init__.py  broken_rule.py  layer.py  local_config.py  module.py  report.py
backend/calint/calint/frameworks/: __init__.py  click_printer.py  importlinter_linter.py  json_serializer.py
backend/calint/calint/use_cases/: __init__.py  create_config.py  lint.py
backend/calint/calint/use_cases/ports/: __init__.py  create_config.py  lint.py  print.py
backend/calint/tests/: test_cli.py
backend/calint/tests/example_program/: .calintrc.json  app.py
backend/calint/tests/example_program/.calint/: importlinter.ini
backend/calint/tests/example_program/app/: app.py
backend/calint/tests/example_program/app/adapters/: adapter.py
backend/calint/tests/example_program/app/entities/: entity.py
backend/calint/tests/example_program/app/usecases/: usecase.py
backend/calint/tests/use_cases/: test_lint.py
frontend/: app.py
frontend/templates/: index.html  styles.css
